# impulse

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  THIRD_PARTY_NOTICES.md  impulse-launcher.sh  impulse.desktop  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts
.github/workflows/: ci.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake
packaging/arch/: .SRCINFO  PKGBUILD
packaging/flatpak/: build-single-file-bundle.sh  com.kylxbn.impulse.yaml
packaging/linux/: com.kylxbn.impulse.desktop  com.kylxbn.impulse.metainfo.xml.in  generate-icons.sh  impulse.desktop  org.mpris.MediaPlayer2.impulse.service
src/: CMakeLists.txt  main.cpp
src/app/: AppSettings.hpp  Application.cpp  Application.hpp  GaplessPendingRequest.hpp  GaplessTrackQueue.hpp  SessionStorage.cpp  SessionStorage.hpp  SettingsStorage.cpp  SettingsStorage.hpp
src/audio/: AudioOutput.cpp  AudioOutput.hpp  BitrateSpanQueue.hpp  Decoder.cpp  Decoder.hpp  DecoderBackend.hpp  DecoderProvider.cpp  DecoderProvider.hpp  FFmpegDecoderBackend.cpp  FFmpegDecoderBackend.hpp  GaplessTrimmer.hpp  OpenMptDecoderBackend.cpp  OpenMptDecoderBackend.hpp  PeakMeterAccumulator.hpp  PeakSpanQueue.hpp  ReplayGain.hpp  RingBuffer.hpp  SapDecoderBackend.cpp  SapDecoderBackend.hpp  Sc68DecoderBackend.cpp  Sc68DecoderBackend.hpp  VgmDecoderBackend.cpp  VgmDecoderBackend.hpp
src/browser/: FileBrowser.cpp  FileBrowser.hpp
src/core/: AudioFormat.hpp  Events.hpp  Lyrics.cpp  Lyrics.hpp  MediaSource.cpp  MediaSource.hpp  NowPlayingTrack.hpp  PlaybackState.hpp  PlaybackStatusUtils.hpp  Sc68Support.cpp  Sc68Support.hpp  SupportedFormats.cpp  SupportedFormats.hpp  TrackInfo.hpp
src/dsp/: WindowFunctions.hpp
src/main/: index.ts
src/main/services/: app-controller.ts  config-store.ts  cover-art-service.ts  file-browser.ts  lyrics-service.ts  metadata-load-queue.ts  metadata-service.ts  mpris-bridge.ts  path-utils.ts  playlist-manager.ts  runtime-dependencies.ts  session-store.ts  settings-utils.ts
src/main/services/playback/: backend.ts  mpv-ipc-backend.ts
src/metadata/: FFmpegMetadataReader.cpp  FFmpegMetadataReader.hpp  MetadataReadOptions.hpp  MetadataReader.cpp  MetadataReader.hpp  OpenMptMetadataReader.cpp  OpenMptMetadataReader.hpp  SapMetadataReader.cpp  SapMetadataReader.hpp  Sc68MetadataReader.cpp  Sc68MetadataReader.hpp  VgmMetadataReader.cpp  VgmMetadataReader.hpp
src/mpris/: MprisModel.cpp  MprisModel.hpp  MprisService.cpp  MprisService.hpp
src/playlist/: M3U8Playlist.cpp  M3U8Playlist.hpp  PlaylistManager.cpp  PlaylistManager.hpp  PlaylistWorkspace.cpp  PlaylistWorkspace.hpp
src/preload/: index.ts
src/renderer/: App.module.css  App.tsx  app-defaults.ts  main.tsx  metadata-utils.ts  styles.css  vite-env.d.ts
src/renderer/components/: AppContextMenu.module.css  AppContextMenu.tsx  FileBrowser.module.css  FileBrowser.tsx  FilePropertiesContent.module.css  FilePropertiesContent.tsx  LyricsPanel.module.css  LyricsPanel.tsx  PlaylistTable.module.css  PlaylistTable.tsx  SettingsModal.module.css  SettingsModal.tsx  TopRegion.module.css  TopRegion.tsx
src/renderer/hooks/: use-global-keyboard-shortcuts.ts
src/renderer/views/: AlbumArtWindowView.module.css  AlbumArtWindowView.tsx  FilePropertiesWindowView.tsx  SettingsWindowView.module.css  SettingsWindowView.tsx  StandaloneWindow.module.css
src/shared/: constants.ts  format.ts  types.ts
src/ui/: MainWindow.cpp  MainWindow.hpp  PlaybackNavigationUtils.hpp
tests/: CMakeLists.txt  TestSapFixture.hpp  test_bitrate_span_queue.cpp  test_decoder.cpp  test_file_browser.cpp  test_gapless_pending_request.cpp  test_gapless_track_queue.cpp  test_gapless_trimmer.cpp  test_lyrics.cpp  test_metadata.cpp  test_mpris_model.cpp  test_peak_meter_accumulator.cpp  test_peak_span_queue.cpp  test_playback_status_utils.cpp  test_playlist.cpp  test_playlist_io.cpp  test_replay_gain.cpp  test_ringbuffer.cpp  test_session.cpp  test_settings.cpp
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml
web/src/: main.js  main.ts  style.css
